create login pages and fix bugs #11
