# book-lending-ui/src/app/services/models.ts
@@ -5,6 +5,9 @@ export { AuthenticationResponse } from './models/authentication-response';
 export { BookRequest } from './models/book-request';
 export { BookResponse } from './models/book-response';
 export { BorrowedBookResponse } from './models/borrowed-book-response';
+export { FeedbackRequest } from './models/feedback-request';
+export { FeedbackResponse } from './models/feedback-response';
 export { PageResponseBookResponse } from './models/page-response-book-response';
 export { PageResponseBorrowedBookResponse } from './models/page-response-borrowed-book-response';
+export { PageResponseFeedbackResponse } from './models/page-response-feedback-response';
 export { RegistrationRequest } from './models/registration-request';
