# book-lending-ui/src/app/services/models/feedback-response.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface FeedbackResponse {
+  comment?: string;
+  ownerFeedback?: boolean;
+  rate?: number;
+}
